[tool.poetry]
name = "learning-electronics"
version = "0.1.0"
description = "learning circuits"
authors = ["Garrett Duby <gduby@ratioeleven.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.15"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
